--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/start",
+    "start": "nodemon ./bin/start",
     "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
   },
   "dependencies": {
@@ -14,9 +14,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "^3.0.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
+    "natural": "^0.5.4",
+    "nodemon": "^1.12.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
