--- a/Server/package.json
+++ b/Server/package.json
@@ -20,7 +20,9 @@
     "morgan": "^1.8.2",
     "natural": "^0.5.4",
     "nodemon": "^1.12.1",
-    "serve-favicon": "^2.4.3"
+    "pos": "^0.4.2",
+    "serve-favicon": "^2.4.3",
+    "wordnet-db": "^3.1.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
